[gd_scene load_steps=8 format=2]

[ext_resource path="res://LaserTurret/LaserTurretMaterial.tres" type="Material" id=1]
[ext_resource path="res://LaserTurret/LaserTurret.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 0.2, 0.5 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.1
bottom_radius = 0.1
height = 1.2
radial_segments = 8

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.7, 0.3, 0.4 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.1
bottom_radius = 0.08
height = 0.15
radial_segments = 8

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.482099, 0.707552, 1 )

[node name="LaserTurret" type="Spatial"]
script = ExtResource( 2 )

[node name="Graphics" type="Spatial" parent="."]

[node name="Base" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Stick" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00104403, 0.698956, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="Gun" type="MeshInstance" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.243053, 1.25326, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="Nozzle" type="MeshInstance" parent="Graphics"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0.671467, 1.25285, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="ShootingPosition" type="Position3D" parent="Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.757641, 1.27019, 0 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.23001, 0.707722, 0 )
shape = SubResource( 5 )
